fix front page spacing and fonts

--- a/styles.css
+++ b/styles.css
@@ -34,16 +34,40 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: top;
+    gap: 12px;
 
     
 }
 
 .hero-head h1 {
     font-size: 82px;
-    font-family: "roboto";
+    font-family:'Poppins','Courier New', Courier, monospace;
+    font-weight: 600;
 }
 
+.button {
+    display:flex;
+    gap: 12px;
+}
 .btn{
-    --bs-btn-font-size: 25px;
+    --bs-btn-font-size: 18px;
+    padding-left: 16px;
+    padding-right: 16px;
+}
+
+.search {
+    width: 574px;
+    height: 46px;
+
+}
+
+.head-text {
+    background-color: rgb(229,9,20);
+    padding: 12px;
+}
+
+.hero-head{
+    margin-top: 240px;
+    margin-bottom: 24px;
 }
